--- a/bibl.bib
+++ b/bibl.bib
@@ -52,6 +52,18 @@ publishers
 ----------------
 published papers
 
+@article{sfb,
+	author		= "Gregorio Curello and Ludvig Sinander",
+	year		= "2025",
+	title		= "Screening for breakthroughs",
+	journaltitle= te,
+	volume		= "20",
+	number		= "4",
+	pages		= "1323--1365",
+	langid		= "american",
+	doi			= "10.3982/TE6247",
+}
+
 @article{AbreuPearceStacchetti1990,
 	author		= "Dilip Abreu and David Pearce and Ennio Stacchetti",
 	year		= "1990",
@@ -469,6 +481,18 @@ published papers
 	langid		= "american",
 }
 
+@article{BulowRoberts1989,
+	author		= "Jeremy Bulow and John Roberts",
+	year		= "1989",
+	title		= "The simple economics of optimal auctions",
+	journaltitle= jpe,
+	volume		= "97",
+	number		= "5",
+	pages		= "1060--1090",
+	langid		= "american",
+	doi			= "10.1086/261643",
+}
+
 @article{CampbellEdererSpinnewijn2014,
 	author		= "Arthur Campbell and Florian Ederer and Johannes Spinnewijn",
 	year		= "2014",
@@ -492,6 +516,18 @@ published papers
 	pages		= "104--133",
 	langid		= "american",
 	doi			= "10.1016/j.jet.2012.12.014",
+}
+
+@article{ChakravartyKaplan2013,
+	author		= "Surajeet Chakravarty and Todd R. Kaplan",
+	year		= "2013",
+	title		= "Optimal allocation without transfer payments",
+	journaltitle= geb,
+	volume		= "77",
+	number		= "1",
+	pages		= "1--20",
+	langid		= "american",
+	doi			= "10.1016/j.geb.2012.08.006",
 }
 
 @article{CheKimMierendorff2013,
@@ -1183,6 +1219,16 @@ published papers
 	pages		= "1--8",
 	langid		= "american",
 	doi			= "10.1007/s40505-014-0055-3",
+}
+
+@inproceedings{HartlineRoughgarden2008,
+	author		= "Jason D. Hartline and Tim Roughgarden",
+	year		= "2008",
+	title		= "Optimal mechanism design and money burning",
+	booktitle	= "{STOC} '08: {P}roceedings of the fortieth annual {ACM} symposium on theory of computing",
+	pages		= "75--84",
+	langid		= "american",
+	doi			= "10.1145/1374376.1374390",
 }
 
 @article{HopenhaynNicolini1997,
@@ -1919,6 +1965,18 @@ published papers
 	doi			= "10.2307/2297484",
 }
 
+@article{Spence1973,
+	author		= "Michael Spence",
+	year		= "1973",
+	title		= "Job market signaling",
+	journaltitle= qje,
+	volume		= "87",
+	number		= "3",
+	pages		= "355--374",
+	langid		= "american",
+	doi			= "10.2307/1882010",
+}
+
 @article{ThomasWorrall1990,
 	author		= "Jonathan Thomas and Tim Worrall",
 	year		= "1990",
@@ -2004,34 +2062,37 @@ published papers
 	doi			= "10.1257/aer.20210616",
 }
 
+@article{Yoon2011,
+	author		= "Kiho Yoon",
+	year		= "2011",
+	title		= "Optimal mechanism design when both allocative inefficiency and expenditure inefficiency matter",
+	journaltitle= jme,
+	volume		= "47",
+	number		= "6",
+	pages		= "670--676",
+	langid		= "american",
+	doi			= "10.1016/j.jmateco.2011.09.002",
+}
+
 
 --------------
 working papers
 
-@unpublished{sfb,
-	author		= "Gregorio Curello and Ludvig Sinander",
-	year		= "2024",
-	title		= "Screening for breakthroughs",
-	note		= "working paper, 21 Feb 2024",
-	langid		= "american",
-	doi			= "10.48550/arXiv.2011.10090",
-}
-
 @unpublished{BallKattwinkel2023,
 	author		= "Ian Ball and Deniz Kattwinkel",
-	year		= "2024",
+	year		= "2025",
 	title		= "Quota mechanisms",
 	subtitle	= "Finite-sample optimality and robustness",
-	note		= "working paper, 17 Oct 2024",
+	note		= "working paper, 13 May 2025",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2309.07363",
 }
 
 @unpublished{BenporathDekelLipmanInprogress,
 	author		= "Elchanan Ben-Porath and Eddie Dekel and Barton L. Lipman",
-	year		= "2023",
+	year		= "2024",
 	title		= "Sequential mechanisms for evidence acquisition",
-	note		= "working paper, Jun 2023",
+	note		= "working paper, Apr 2024",
 	langid		= "american",
 }
 
@@ -2055,10 +2116,11 @@ working papers
 
 @unpublished{ErlansonKleiner2022,
 	author		= "Albin Erlanson and Andreas Kleiner",
-	year		= "2022",
+	year		= "2024",
 	title		= "Optimal allocations with capacity constrained verification",
-	note		= "work in progress",
+	note		= "working paper, 4 Sep 2024",
 	langid		= "american",
+	doi			= "10.48550/arXiv.2409.02031",
 }
 
 @unpublished{EsoSzentes2003,
@@ -2113,9 +2175,9 @@ working papers
 
 @unpublished{JeongPycia2023,
 	author		= "Byeong-hyeon Jeong and Marek Pycia",
-	year		= "2023",
+	year		= "2025",
 	title		= "The first-price principle of maximizing economic objectives",
-	note		= "working paper, Nov 2023",
+	note		= "working paper, Sep 2025",
 	langid		= "american",
 }
 
@@ -2488,6 +2550,15 @@ books
 
 -------------------
 lecture notes, etc.
+
+@unpublished{gt,
+	author		= "Ludvig Sinander",
+	year		= "2025",
+	title		= "Advanced game theory",
+	note		= "lecture notes, 16 Apr 2025",
+	langid		= "american",
+	url			= "https://github.com/ludvigsinander/Sinander_game_theory_notes/raw/main/Sinander_game_theory_notes.pdf",
+}
 
 
 
