--- a/ch4.tex
+++ b/ch4.tex
@@ -526,7 +526,7 @@ The authors show that this `maxing-out' will happen a.s. in finite time. (If you
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Single breakthrough, general payoffs}
+\subsection{Single breakthrough}
 \label{sec:ch4:dynamics:sfb}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
