--- a/ms.tex
+++ b/ms.tex
@@ -41,7 +41,7 @@
 	\newcommand{\hyperdest}[1]{\Hy@raisedlink{\hypertarget{#1}{}}}
 \makeatother
 
-% % watermark on every page (for version control)
+% % % watermark on every page (for version control)
 % \usepackage[anchor=ll,pos={0.1cm,0.5cm},fontsize=0.2cm,angle=0,alignment=l]{draftwatermark}
 % \SetWatermarkText{\normalfont\hspace{0.37em}version:\\\normalfont {\datestyle\today}\\\normalfont\hspace{0.37em}at {\currenttime}}
 
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 24 June 2025}
+\date{\small This version: 7 December 2025}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
